overflow of page fixing

--- a/index.css
+++ b/index.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 
 }
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .navbar{
     height: 60px;
     background:black;
